Fixing alignment

--- a/_sass/icons.scss
+++ b/_sass/icons.scss
@@ -3,6 +3,7 @@
   margin-top: 30px;
 
   .icon {
+    vertical-align: top;
     width: 310px;
     display: inline-block;
     background: #fff;
